--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.4",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.4.4",
     "@angular/compiler": "^4.4.4",
     "@angular/core": "^4.4.4",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.4.4",
     "@angular/router": "^4.4.4",
     "core-js": "^2.5.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.14"
   },
