--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
+    "@angular/animations": "^5.0.0-rc.8",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
+    "@angular/common": "^5.0.0-rc.8",
+    "@angular/compiler": "^5.0.0-rc.8",
+    "@angular/core": "^5.0.0-rc.8",
+    "@angular/forms": "^5.0.0-rc.8",
+    "@angular/http": "^5.0.0-rc.8",
     "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/platform-browser": "^5.0.0-rc.8",
+    "@angular/platform-browser-dynamic": "^5.0.0-rc.8",
+    "@angular/platform-server": "^5.0.0-rc.8",
+    "@angular/router": "^5.0.0-rc.8",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
     "normalize.css": "^7.0.0",
@@ -30,9 +31,9 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/language-service": "^4.4.6",
+    "@angular/cli": "^1.5.0-rc.6",
+    "@angular/compiler-cli": "^5.0.0-rc.8",
+    "@angular/language-service": "^5.0.0-rc.8",
     "@types/jasmine": "^2.6.1",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^6.0.90",
