--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "dist": "ng build",
-    "dist:aot": "ng build --aot",
-    "prod": "ng build --prod",
-    "prod:aot": "ng build --prod --aot",
-    "prod:opt": "ng build --prod --build-optimizer"
+    "dist": "ng build --aot",
+    "prod": "ng build --prod --aot",
+    "prod:opt": "ng build --prod --aot --build-optimizer"
   },
   "private": true,
   "dependencies": {
